Fixed bug with overflowing footer width

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,11 +1,11 @@
 .footer{
-  width: 65%;
+  max-width: 90%;
   border-block: 5px solid whitesmoke;
   font-size: 16px;
 }
 
 .footer>h3{
-  width: 100%;
+  max-width: 100%;
   margin-left: 40%;
 }
 
